--- a/index.html
+++ b/index.html
@@ -206,6 +206,66 @@
         <h1>Лого макароны</h1>
 
         <div class="Block_1_2" data-name="[ Лого макароны ]" data-quantity="0" data-multiplier="Tex_1" style="display: none;"></div>
+        <div class="Block_1_2" data-name="СДР" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="СДР-подарок" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="СДР-шары" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Мамочка" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Любимая" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Девушка" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Сердце 14ф" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Зайка 14ф" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Конверт 14ф" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Ракета" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Солнце" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
+        <div class="Block_1_2" data-name="Дом" data-quantity="0" data-multiplier="36">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
         <div class="Block_1_2" data-name="Все" data-quantity="0" data-multiplier="Tex_2">
             <h4 class="Text"></h4>
             <div class="button">+</div>
