--- a/index.html
+++ b/index.html
@@ -488,6 +488,11 @@
             <div class="button">+</div>
             <div class="button">-</div>
         </div>
+        <div class="Block_1_2" data-name="Тарталетки бумажные" data-quantity="0" data-multiplier="0">
+            <h4 class="Text"></h4>
+            <div class="button">+</div>
+            <div class="button">-</div>
+        </div>
         
         <div class="Block_1_2" data-name="Все" data-quantity="0" data-multiplier="Tex_2">
             <h4 class="Text"></h4>
